# adaptive-ai-tutor

./: .gitignore  README.md  main.py  pyproject.toml
adaptive_tutor/: main.py  models.py  run.py  run2.py  v_build_graph.py
agents/: doubt_agent.py  overview_agent.py  research_agent.py  router.py  router_base.py  router_node.py
core/: cache.py  memory_manager.py  parent_chunk.py  state.py
create_pipeline/: Memory.py  build_bm25.py  build_context.py  build_faiss.py  chunking.py  cleaning.py  dense_retrieve.py  embed_child.py  fetch_paper.py  fetch_unique_parents.py  hybrid_retrieve.py  initialize_rag.py  load_and_save.py  normalize_name.py  section_parent_chunk.py  sparse_retrieve.py  touch_cache.py
db/: sqlite_db.py
memory/: v_fire_memory.py
memory/ltm/: build_graph.py  importance_score.py  memory_extractor.py  merge_update.py  retrieve_ltm.py  semantic_dedup.py  storeNode.py  utils.py
memory/stm/: build_context.py  build_graph.py  get_message_to_sum.py  ingest.py  stm_raw.py  stm_sum.py  upd_lst_idx.py  utils.py  v_read_context.py
utils/: debug_store.py  pdf_processor.py
